# Dashboard_Business_Attrition_Vercel

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
api/: test.py
api/python/: predict-complex-backup.py  predict-fallback.py  predict-simple-clean.py  predict-simple.py  predict.py  requirements-minimal.txt  requirements.txt
api/python/models/: rf_model.pkl  scaler.pkl
components/: Layout.js  LookerEmbed.js  PredictionForm.js
config/: mlflow_config.py
pages/: _app.js  dashboard.js  index.js  prediction.js  settings.js
pages/api/: analytics.js  predict-model.js  predict.js  predict_mock_backup.js
public/data/: hasil_output_DSP (2).csv
scripts/: check_memory.py  check_model_features.py  predict.py  predict_real.py  predict_simple.py  predict_with_model.py  setup_dagshub.py  test_dagshub_connection.py  test_json.py  test_model_util.py  test_prediction.py
styles/: globals.css
utils/: model_util.py
