[project]
name = "dashboard-business-attrition"
version = "0.1.0"
description = "Employee Attrition Prediction Dashboard"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0", 
    "joblib>=1.3.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"